 . Particles: added support for start/end/var spinning (issue #335)
 . Particles: support for World/Local coordinates (issue #241)
 . Primitives: added bezier path support (issue #380)
 . Texture2D: new alias/antialias API (issue #226)
 . Texture2D: supports 16-bit textures RGB4 and RGB5A1 (default is RGBA4444) (issue #356)
 . Texture2D: blending mode varies according to texture (issue #125)
 . TextureAtlas: uses interleaved vertex array (issue #359)
 . TextureMgr: added method that removes unused textures (issue #117)
 . Transition: onEnterTransitionDidFinsih added. OnExit and onEnter only once (issue #172)
 . Types: types follows OpenGL "standards" (issue #360)
 . Touch Events: new touch dispatcher (issue #211)
 . Touch Events: menu uses new touch dispatcher (issue #362)
 . XCode: fixed compile error when keyboard registry is enabled (issue #387)

 version 0.7.3 - 18-May-2009
 . Actions: Sequence works when 1st action is an InstantAction. InstantActions are reversible (issue #348)
 . CocosLive: Demo shows world rankings (issue #342)
 . Director: "new" Fast Director. Attach/Detach, auto-lock, SDK 3.0 works (issue #145, #issue #239, issue #340)
 . Texture2D: supports 16-bit textures RGB4 and RGB5A1 (issue #356)
 . Support: CGPointExtension compatible with c++ (issue #369)

version 0.7.2 - 23-Apr-2009
 . All: removed chipmunk macros. using CG macros (issue #290)
 . Actions: Added TintTo and TintBy (issue #204)
 . AtlasSprite: don't overwrite index 0 (issue #283)
 . AtlasSprite: Supports Z-order (issue #275)
 . AtlasSprite & Sprite: don't auto center sprite when setting frame (issue #281)
 . AtlasSprite: don't render in subpixels (issue #135)
 . AtlasSpriteManager: supports transformations (issue #308)
 . AtlasSpriteManager: fixes in removeChild (issue #296)
 . AtlasSpriteManager: works with capacity=1 (issue #305)
 . CocosNode: CocosNodeExtras merged into CocosNode (issue #292)
 . CocosNode: improved runAction/stopAction (issue #300)